crates/doodle-core/tests/snapshots/broken_syntax__32_missing_index_bracket.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `]` to close this index
  --> 32-missing-index-bracket.doodle:2:1
2 | 
  | ^
